# fastapi-enterprise

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Dockerfile  Makefile  README-observability.md  README-quickstart.md  README.md  alembic.ini  docker-compose.yml  k6-load-test.js  pyproject.toml  setup.py
.cursor/rules/: 00-overview.md  01-architecture.md  02-controller-layer.md  03-service-layer.md  04-repository-layer.md  05-domain-layer.md  06-testing.md  07-dependency-injection.md  08-code-standards.md  09-development-workflow.md  10-anti-patterns.md  11-ai-assistant-workflow.md  README.md
alembic/: env.py
alembic/versions/: 20250928_1614_554483b016d0_initial_migration.py
app/: __init__.py  main.py
app/adapter/: __init__.py
app/adapter/inbound/: __init__.py
app/adapter/inbound/web/: __init__.py  dependencies.py  pricing.py  schemas.py
app/adapter/outbound/: __init__.py
app/adapter/outbound/persistence/: __init__.py  cost_data_adapter.py  pricing_config_adapter.py
app/adapter/outbound/telemetry/: __init__.py  metrics_adapter.py
app/config/: dependencies.py
app/controller/: __init__.py  health_controller.py  pricing_controller.py
app/core/: __init__.py  celery_app.py  config.py  database.py  exceptions.py  logging.py  repository.py  security.py  tasks.py  telemetry.py
app/core/application/: __init__.py
app/core/application/pricing/: __init__.py  use_cases.py
app/core/domain/: __init__.py
app/core/domain/cost/: __init__.py  calculations.py  models.py
app/core/domain/cost/models/: __init__.py  cost_breakdown.py  enums.py  material_cost.py  part_dimensions.py  part_specification.py  process_cost.py
app/core/domain/pricing/: __init__.py  calculations.py  models.py
app/core/domain/pricing/discount/: __init__.py  calculations.py  models.py
app/core/domain/pricing/margin/: __init__.py  calculations.py  models.py
app/core/domain/pricing/models/: __init__.py  price_breakdown.py  pricing_configuration.py  pricing_request.py  shipping_cost.py
app/core/domain/pricing/tier/: __init__.py  calculations.py  models.py
app/core/port/: __init__.py
app/core/port/inbound/: __init__.py
app/core/port/outbound/: __init__.py  cost_ports.py  pricing_ports.py
app/cost/: __init__.py  models.py  repository.py
app/cost/core/: __init__.py  calculations.py
app/domain/: __init__.py
app/domain/core/: __init__.py
app/domain/core/cost/: __init__.py  calculations.py
app/domain/core/pricing/: __init__.py  calculations.py  discount_calculations.py  margin_calculations.py  tier_calculations.py
app/domain/model/: __init__.py  cost_models.py  enums.py  pricing_models.py
app/dto/: __init__.py
app/dto/request/: __init__.py  pricing_request.py
app/dto/response/: __init__.py  pricing_response.py
app/exception/: __init__.py  domain_exceptions.py  handler.py
app/health/: __init__.py  controller.py
app/infra/: __init__.py  celery_app.py
app/infrastructure/: celery_app.py  database.py
app/modules/: __init__.py
app/modules/cost/: __init__.py  domain.py  service.py
app/modules/pricing/: __init__.py  domain.py  exceptions.py  explainability.py  limits.py  repository.py  router.py  schemas.py  service.py
app/pricing/: __init__.py  controller.py  dto.py  models.py  repository.py  service.py
app/pricing/core/: __init__.py  calculations.py  discount_calculations.py  margin_calculations.py  tier_calculations.py
app/repository/: __init__.py  config_repository.py  cost_repository.py  metrics_repository.py  pricing_repository.py
app/service/: __init__.py  pricing_service.py
app/shared/: __init__.py  config.py  config_repository.py  dependencies.py  exception_handler.py  metrics_repository.py
docs/: README.md
docs/architecture/: README.md  application-architecture.md  clean-architecture.md  database-architecture.md  design-principles.md  folder-structure.md  hexagonal-architecture.md  layered-architecture.md
docs/development/: README.md  adding-features.md  domain-development.md  getting-started.md
docs/features/: pricing-system.md
docs/operations/: README.md  celery-workers.md  database-migrations.md  docker-deployment.md  elk-stack.md  golden4-metrics.md  slo-definitions.md
observability/: alertmanager.yml  filebeat.yml  mongo-init.js  otel-collector-config.yaml  pricing_alerts.yml  prometheus.yml
observability/grafana/dashboards/: enterprise-metrics-dashboard.json  pricing-dashboard.json  slo-dashboard.json
observability/grafana/provisioning/datasources/: datasources.yml
observability/kibana/index-patterns/: logs-index-pattern.json
observability/kibana/provisioning/index-patterns/: index-patterns.yml
scripts/: init-mongo.js  init-postgres.sql  pricing_demo.py  quick-start.sh
tests/: __init__.py  conftest.py  test_pricing_limits.py
tests/api/: test_health.py
tests/contract/: README.md  __init__.py  schemas.py  test_api_contracts.py
tests/integration/: test_api_integration.py  test_data_factory.py  test_lifespan.py  test_main.py  test_main_error_handlers.py  test_main_middleware.py  test_main_routes.py  test_pricing_api.py  test_pricing_error_paths.py  test_pricing_router_edge_cases.py
tests/unit/: test_adapter_error_paths.py  test_config.py  test_database.py  test_exceptions.py  test_main_sanitize.py  test_main_sanitize_comprehensive.py  test_metrics_adapter.py  test_telemetry.py  test_telemetry_manager.py  test_telemetry_parse_headers.py  test_telemetry_setup.py  test_telemetry_tracing_paths.py  test_use_cases.py
tests/unit/domains/: __init__.py  test_cost_calculations.py  test_discount_calculations.py  test_price_breakdown.py  test_pricing_calculations.py  test_tier_calculations.py  test_tier_calculations_comprehensive.py
